{
  "version": 4,
  "terraform_version": "1.8.2",
  "serial": 56,
  "lineage": "26c54caf-7a72-0993-4a7a-2749e0a66658",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:network-acl/acl-0fe271481dd4e6818",
            "default_network_acl_id": "acl-0fe271481dd4e6818",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fe271481dd4e6818",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "700867317784",
            "subnet_ids": [
              "subnet-05c10e5d362e96d60",
              "subnet-0628d36295bad08b8",
              "subnet-08b15b30f27d5e156",
              "subnet-0beee679d27f321e8",
              "subnet-0d6274e10cf2a5c11",
              "subnet-0ec005a29eaf15826"
            ],
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-default",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-default",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:route-table/rtb-029af59b194b1a849",
            "default_route_table_id": "rtb-029af59b194b1a849",
            "id": "rtb-029af59b194b1a849",
            "owner_id": "700867317784",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-default",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-default",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:security-group/sg-0acd823a687598803",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0acd823a687598803",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "700867317784",
            "revoke_rules_on_delete": false,
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-default",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-default",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f22dc6678730904",
            "arn": "arn:aws:ec2:us-east-2:700867317784:elastic-ip/eipalloc-04f22dc6678730904",
            "association_id": "eipassoc-084d0b7d30874f702",
            "domain": "vpc",
            "id": "eipalloc-04f22dc6678730904",
            "network_border_group": "us-east-2",
            "network_interface": "eni-016725a06d6f25c7b",
            "private_dns": "ip-10-0-101-187.us-east-2.compute.internal",
            "private_ip": "10.0.101.187",
            "public_dns": "ec2-52-14-60-59.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.60.59",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fe7a492e2388eaf",
            "arn": "arn:aws:ec2:us-east-2:700867317784:elastic-ip/eipalloc-04fe7a492e2388eaf",
            "association_id": "eipassoc-06cecc64a7e7014fd",
            "domain": "vpc",
            "id": "eipalloc-04fe7a492e2388eaf",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0c996132e4a11dcd3",
            "private_dns": "ip-10-0-102-235.us-east-2.compute.internal",
            "private_ip": "10.0.102.235",
            "public_dns": "ec2-3-15-76-244.us-east-2.compute.amazonaws.com",
            "public_ip": "3.15.76.244",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0473704111913421d",
            "arn": "arn:aws:ec2:us-east-2:700867317784:elastic-ip/eipalloc-0473704111913421d",
            "association_id": "eipassoc-0ee1b1d7733770558",
            "domain": "vpc",
            "id": "eipalloc-0473704111913421d",
            "network_border_group": "us-east-2",
            "network_interface": "eni-009372e85951b123c",
            "private_dns": "ip-10-0-103-140.us-east-2.compute.internal",
            "private_ip": "10.0.103.140",
            "public_dns": "ec2-3-135-85-63.us-east-2.compute.amazonaws.com",
            "public_ip": "3.135.85.63",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc": true
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:internet-gateway/igw-03d182788d971d4f3",
            "id": "igw-03d182788d971d4f3",
            "owner_id": "700867317784",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04f22dc6678730904",
            "association_id": "eipassoc-084d0b7d30874f702",
            "connectivity_type": "public",
            "id": "nat-07426d1f3f64a79fe",
            "network_interface_id": "eni-016725a06d6f25c7b",
            "private_ip": "10.0.101.187",
            "public_ip": "52.14.60.59",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d6274e10cf2a5c11",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04fe7a492e2388eaf",
            "association_id": "eipassoc-06cecc64a7e7014fd",
            "connectivity_type": "public",
            "id": "nat-018fc31c8b02d11c2",
            "network_interface_id": "eni-0c996132e4a11dcd3",
            "private_ip": "10.0.102.235",
            "public_ip": "3.15.76.244",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08b15b30f27d5e156",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0473704111913421d",
            "association_id": "eipassoc-0ee1b1d7733770558",
            "connectivity_type": "public",
            "id": "nat-0d1b686512e92e1dd",
            "network_interface_id": "eni-009372e85951b123c",
            "private_ip": "10.0.103.140",
            "public_ip": "3.135.85.63",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0628d36295bad08b8",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0ac316008564986691080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-07426d1f3f64a79fe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ac31600856498669",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04033478d7073edd31080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-018fc31c8b02d11c2",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04033478d7073edd3",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-067cbbdb21e8efebb1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0d1b686512e92e1dd",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-067cbbdb21e8efebb",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03d182788d971d4f3",
            "id": "r-rtb-0611c8d04fabf311b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0611c8d04fabf311b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:route-table/rtb-0ac31600856498669",
            "id": "rtb-0ac31600856498669",
            "owner_id": "700867317784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-07426d1f3f64a79fe",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:route-table/rtb-04033478d7073edd3",
            "id": "rtb-04033478d7073edd3",
            "owner_id": "700867317784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-018fc31c8b02d11c2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:route-table/rtb-067cbbdb21e8efebb",
            "id": "rtb-067cbbdb21e8efebb",
            "owner_id": "700867317784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0d1b686512e92e1dd",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:route-table/rtb-0611c8d04fabf311b",
            "id": "rtb-0611c8d04fabf311b",
            "owner_id": "700867317784",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03d182788d971d4f3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-public",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-public",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08da29bdd2385a907",
            "route_table_id": "rtb-0ac31600856498669",
            "subnet_id": "subnet-0ec005a29eaf15826"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4612617f7e409c0",
            "route_table_id": "rtb-04033478d7073edd3",
            "subnet_id": "subnet-05c10e5d362e96d60"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-001b53d7bdf032c2a",
            "route_table_id": "rtb-067cbbdb21e8efebb",
            "subnet_id": "subnet-0beee679d27f321e8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09cc6cee3e3c16212",
            "route_table_id": "rtb-0611c8d04fabf311b",
            "subnet_id": "subnet-0d6274e10cf2a5c11"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04aea67ea4bec40ee",
            "route_table_id": "rtb-0611c8d04fabf311b",
            "subnet_id": "subnet-08b15b30f27d5e156"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e47be74cd66d5404",
            "route_table_id": "rtb-0611c8d04fabf311b",
            "subnet_id": "subnet-0628d36295bad08b8"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:subnet/subnet-0ec005a29eaf15826",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ec005a29eaf15826",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700867317784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:subnet/subnet-05c10e5d362e96d60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c10e5d362e96d60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700867317784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:subnet/subnet-0beee679d27f321e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0beee679d27f321e8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700867317784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-private-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:subnet/subnet-0d6274e10cf2a5c11",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d6274e10cf2a5c11",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700867317784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-public-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-public-us-east-2a",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:subnet/subnet-08b15b30f27d5e156",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08b15b30f27d5e156",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700867317784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-public-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-public-us-east-2b",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:subnet/subnet-0628d36295bad08b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0628d36295bad08b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "700867317784",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-public-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc-public-us-east-2c",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0b225421136dd88fb"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:700867317784:vpc/vpc-0b225421136dd88fb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fe271481dd4e6818",
            "default_route_table_id": "rtb-029af59b194b1a849",
            "default_security_group_id": "sg-0acd823a687598803",
            "dhcp_options_id": "dopt-0e6e59661b044d975",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b225421136dd88fb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-029af59b194b1a849",
            "owner_id": "700867317784",
            "tags": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc",
              "Project": "fiap-food",
              "Terraform": "true"
            },
            "tags_all": {
              "Enviroment": "prod",
              "Name": "fiap-food-vpc",
              "Project": "fiap-food",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}